# lxqt-config

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md  input_gtk.diff  lxinput-qt_template-zh_TW.ts  lxqt-config-appearance.ts  lxqt-config-appearance_ar.ts  lxqt-config-appearance_ca.ts  lxqt-config-appearance_cs.ts  lxqt-config-appearance_cs_CZ.ts  lxqt-config-appearance_da.ts  lxqt-config-appearance_da_DK.ts  lxqt-config-appearance_de.ts  lxqt-config-appearance_el.ts  lxqt-config-appearance_eo.ts  lxqt-config-appearance_es.ts  lxqt-config-appearance_es_VE.ts  lxqt-config-appearance_eu.ts  lxqt-config-appearance_fi.ts  lxqt-config-appearance_fr.ts  lxqt-config-appearance_fr_FR.ts  lxqt-config-appearance_hu.ts  lxqt-config-appearance_ia.ts  lxqt-config-appearance_id.ts  lxqt-config-appearance_id_ID.ts  lxqt-config-appearance_it.ts  lxqt-config-appearance_ja.ts  lxqt-config-appearance_ko.ts  lxqt-config-appearance_lt.ts  lxqt-config-appearance_nl.ts  lxqt-config-appearance_pl.ts  lxqt-config-appearance_pl_PL.ts  lxqt-config-appearance_pt.ts  lxqt-config-appearance_pt_BR.ts  lxqt-config-appearance_ro_RO.ts  lxqt-config-appearance_ru.ts  lxqt-config-appearance_sk.ts  lxqt-config-appearance_sk_SK.ts  (+199 more)
liblxqt-config-cursor/: CMakeLists.txt  cfgfile.cpp  cfgfile.h  crtheme.cpp  crtheme.h  itemdelegate.cpp  itemdelegate.h  main.cpp  main.h  previewwidget.cpp  previewwidget.h  selectwnd.cpp  selectwnd.h  selectwnd.ui  thememodel.cpp  thememodel.h  translationloader.cpp  warninglabel.cpp  warninglabel.h
liblxqt-config-cursor/man/: lxqt-config-input.1  lxqt-config-mouse.1
liblxqt-config-cursor/translations/: lxqt-config-cursor.ts  lxqt-config-cursor.ts.src  lxqt-config-cursor_ar.ts  lxqt-config-cursor_arn.ts  lxqt-config-cursor_ast.ts  lxqt-config-cursor_bg.ts  lxqt-config-cursor_ca.ts  lxqt-config-cursor_cs.ts  lxqt-config-cursor_cs_CZ.ts  lxqt-config-cursor_cy.ts  lxqt-config-cursor_da.ts  lxqt-config-cursor_da_DK.ts  lxqt-config-cursor_de.ts  lxqt-config-cursor_de_DE.ts  lxqt-config-cursor_el.ts  lxqt-config-cursor_el_GR.ts  lxqt-config-cursor_en_GB.ts  lxqt-config-cursor_eo.ts  lxqt-config-cursor_es.ts  lxqt-config-cursor_es_VE.ts  lxqt-config-cursor_et.ts  lxqt-config-cursor_eu.ts  lxqt-config-cursor_fi.ts  lxqt-config-cursor_fr.ts  lxqt-config-cursor_fr_FR.ts  lxqt-config-cursor_gl.ts  lxqt-config-cursor_he.ts  lxqt-config-cursor_hi.ts  lxqt-config-cursor_hr.ts  lxqt-config-cursor_hu.ts  lxqt-config-cursor_hu_HU.ts  lxqt-config-cursor_id.ts  lxqt-config-cursor_it.ts  lxqt-config-cursor_it_IT.ts  lxqt-config-cursor_ja.ts  lxqt-config-cursor_ka.ts  lxqt-config-cursor_kab.ts  lxqt-config-cursor_kk.ts  lxqt-config-cursor_ko.ts  lxqt-config-cursor_lg.ts  (+23 more)
liblxqt-config-cursor/xcr/: xcrimg.cpp  xcrimg.h  xcrtheme.cpp  xcrtheme.h  xcrthemefx.h  (+5 more)
lxqt-config-appearance/: .lxqtthemeconfig.cpp.swp  CMakeLists.txt  colorLabel.cpp  colorLabel.h  configothertoolkits.cpp  configothertoolkits.h  fontconfigfile.cpp  fontconfigfile.h  fontsconfig.cpp  fontsconfig.h  fontsconfig.ui  gtkconfig.cpp  gtkconfig.h  gtkconfig.ui  iconthemeconfig.cpp  iconthemeconfig.h  iconthemeconfig.ui  iconthemeinfo.cpp  iconthemeinfo.h  lxqt-config-appearance.desktop.in  lxqtthemeconfig.cpp  lxqtthemeconfig.h  lxqtthemeconfig.ui  main.cpp  palettes.ui  styleconfig.cpp  styleconfig.h  styleconfig.ui
lxqt-config-brightness/: CMakeLists.txt  brightnesssettings.cpp  brightnesssettings.h  brightnesssettings.ui  brightnesswatcher.cpp  brightnesswatcher.h  main.cpp  monitorinfo.cpp  monitorinfo.h  outputwidget.cpp  outputwidget.h  outputwidget.ui  xrandrbrightness.cpp  xrandrbrightness.h
lxqt-config-brightness-settings/: CMakeLists.txt  brightnesssettings.cpp  brightnesssettings.desktop  brightnesssettings.h  brightnesssettings.ui  main.cpp  monitorinfo.cpp  monitorinfo.h  outputwidget.cpp  outputwidget.h  outputwidget.ui  xrandrbrightness.cpp
lxqt-config-cursor/: CMakeLists.txt  cfgfile.cpp  cfgfile.h  crtheme.cpp  crtheme.h  main.cpp  previewwidget.cpp  previewwidget.h  selectwnd.cpp  warninglabel.cpp
lxqt-config-file-associations/: CMakeLists.txt  applicationchooser.cpp  applicationchooser.h  applicationchooser.ui  lxqt-config-file-associations.desktop.in  main.cpp  mimetypedata.cpp  mimetypedata.h  mimetypeitemmodel.cpp  mimetypeitemmodel.h  mimetypeviewer.cpp  mimetypeviewer.h  mimetypeviewer.ui
lxqt-config-input/: CMakeLists.txt  keyboardconfig.cpp  keyboardconfig.h  keyboardconfig.ui  keyboardlayoutconfig.cpp  keyboardlayoutconfig.h  keyboardlayoutconfig.ui  keyboardlayoutinfo.h  lxqt-config-input.cpp  lxqt-config-input.desktop.in  lxqt-config-input.h  mouseconfig.cpp  mouseconfig.h  mouseconfig.ui  selectkeyboardlayoutdialog.cpp  selectkeyboardlayoutdialog.h  selectkeyboardlayoutdialog.ui  touchpadconfig.cpp  touchpadconfig.h  touchpadconfig.ui  touchpaddevice.cpp  touchpaddevice.h
lxqt-config-locale/: CMakeLists.txt  combobox.h  localeconfig.cpp  localeconfig.h  localeconfig.ui  lxqt-config-locale.desktop.in  main.cpp
lxqt-config-monitor/: CMakeLists.txt  applydialog.cpp  applydialog.h  applydialog.ui  fakeTest.sh  fastmenu.cpp  fastmenu.h  fastmenu.ui  info-for-developers.txt  kscreenutils.cpp  loadsettings.cpp  loadsettings.h  lxqt-config-monitor.desktop.in  magnetic_attraction.html  main.cpp  main.h  mainwindow.ui  managesavedsettings.cpp  managesavedsettings.h  managesavedsettings.ui  monitor.cpp  monitor.h  monitor.ui  monitorpicture.cpp  monitorpicture.h  monitorpicture.ui  monitorsettingsdialog.cpp  monitorsettingsdialog.h  monitorsettingsdialog.ui  monitorwidget.cpp  monitorwidget.h  monitorwidget.ui  quickoptions.cpp  quickoptions.h  quickoptions.ui  savesettings.cpp  savesettings.h  savesettings.ui  settingsdialog.cpp  settingsdialog.h  (+5 more)
lxqt-config-mouse/: CMakeLists.txt  lxqt-config-mouse.desktop.in  main.cpp  selectwnd.cpp  selectwnd.h  warninglabel.cpp  warninglabel.h
lxqt-monitor/: CMakeLists.txt  Daemon.cpp  Daemon.h  UdevNotifier.cpp  UdevNotifier.h  main.cpp
src/: CMakeLists.txt  lxqt-config.desktop.in  lxqt-config.menu  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+986 files in other folders)
